[package]
name = "lpnh-io"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8" }
log = "0.4.27"
gloo-net = { version = "0.6.0", features = ["http"] }

# dependencies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.100" }
console_log = { version = "1.0.0" }
console_error_panic_hook = { version = "0.1.7" }
